opal-gwt-client/src/main/resources/org/obiba/opal/web/gwt/app/public/css/opal.css
/* ... */
/* Network Notification */ 

.network-notification .title {
  font-weight: bold; 
  font-size:1.2em;
}

.network-notification .message {
  color: black; 
  font-style:italic;
}

/* Top */

.topbar {
  background-color: #c65f00;
}

.topbar > .gwt-Label {
  color:#FFFFFF;
display:inline;
font-size:1.5em;
font-weight:bold;
margin-left:0.8em;
}

.topbar a:hover {
  cursor: pointer;
}

.topbar img {
  margin-left: 0.8em;
  padding-top: 0.3em;
}

.topbar span, .topbar a {
    margin-right: 0.8em;
    float: right;
    margin-top: 0.6em;
}

.topbar span {
    padding-right: 0.8em;
    border-right: dotted 1px;
}


.topbar span, .topbar a, .topbar a:visited, .topbar a:hover {
  color:#ffffff;
}

.top .gwt-MenuBar table {
  border-spacing:0.8em 0;
}

.top .gwt-MenuBar-horizontal {
  background: transparent;
  border: 0px;
  margin-left:40px;
}

.top .gwt-MenuBar-horizontal .gwt-MenuItem {
  background-color: #888888;
  color: #cccccc;
  -moz-border-radius-bottomleft: 0.5em; -webkit-border-bottom-left-radius: 0.5em; 
  -moz-border-radius-bottomright: 0.5em; -webkit-border-bottom-right-radius: 0.5em;
  -moz-box-shadow: 0.1em 0.05em 0.4em #888888;-webkit-box-shadow: 0.1em 0.05em 0.4em #888888;box-shadow: 0.1em 0.05em 0.4em #888888;
}

.top .gwt-MenuBar-horizontal .gwt-MenuItem.selected {
  background-color: #c65f00;
  color: #ffffff;
}

.top .gwt-MenuBar-horizontal .gwt-MenuItem.gwt-MenuItem-selected {
  background-color: #d78f4e;
  color: #ffffff;
}

/* Foot */

.footbar {
  font-size:0.9em;
  margin-left: 4em;
  padding-top: 0.2em;
}

.footbar .gwt-Label {
  display: inline;
  margin-right: 0.4em;
}

.footbar a {
  color: #000000;
}

/* Content */

.main-content {
  background-color: #ffffff;
  margin:0.8em 4em 0px 4em;
  border:0.2em solid #C65F00;
}

/* Workbench */

.workbench .top {
    padding: 0.5em 0 0 1em;
    float: left;
    background:#D78F4E;
    border-bottom:1px solid #B4A291;
    color:#ffffff;
}

.workbench .top .header {
    float: left;
    margin-right:1.6em;
    margin-top: 0.2em;
}

.workbench .top .header .title {
  font-size:1.2em;
  font-weight:bold;
}
  
.workbench .top .summary { 
    margin-top:0.25em;
}
    
.workbench .top .control {
    margin-right: 0.8em;   
}
    
.workbench .top .control button {
    margin-left: 0.8em;
    font-size: 0.9em;
    padding:0.3em 0.8em;
}

.workbench .top .control .help {
    cursor: pointer;
    float: right;
}

.workbench .main {
}

.workbench .main .title {
    font-weight: bold;
    font-size: 1em;
}

.workbench .main .panel  {
  width: 100%;
  margin-bottom:1.6em;
}

.workbench .main .panel .title  {
  font-weight: regular;
  color: #444444;
  border-bottom: solid 1px #444444;
  margin-bottom:0.8em;
  padding-bottom:0.8em;
}

.workbench .main .panel .title span {
  margin-right: 0.8em;
}

.workbench .main .panel .content  {
  
}

.workbench .main .p {
     padding: 0.8em;
}

/* Administration */

.administration {
  padding: 1em;
}

/* Dashboard */

.dashboard {
  padding: 0.5em 0 0 1em;
}

.dashboard .gwt-Label.title {
  font-weight: normal;
}

.dashboard div {
  margin-top:1em;
}

.dashboard .gwt-Label {
  font-weight: bold;
  display: inline;
}

.dashboard .gwt-Label.count {
  font-weight: normal;
}

.dashboard #shortcuts a:hover {
  text-decoration: none;
}

.dashboard #shortcuts a img {
  margin-right: 0.8em;
}

.dashboard #shortcuts a {
  font-weight: bold;
  color: #000000;
}

/* Variable browser */

.gwt-Tree .magma-datasource .gwt-TreeItem {
  background:transparent url(../image/16/bundle.png) no-repeat scroll left center;
  padding-left:20px;
}

.gwt-Tree .magma-table .gwt-TreeItem {
  background:transparent url(../image/16/table.png) no-repeat scroll left center;
  padding-left:20px;
}

.gwt-Tree .magma-view .gwt-TreeItem {
  background:transparent url(../image/16/view.png) no-repeat scroll left center;
  padding-left:20px;
}

.gwt-Tree .gwt-TreeItem-selected {
  font-weight: bold;
}

.navigator {
  padding-bottom: 0.8em;
}

.navigator .titlebar {
  background-color:#F3F4EB;
  color:#444444;
    padding-bottom:0.2em;
    padding-left:0.8em;
    padding-top:0.2em;
}

.navigator .titlebar div {
  display:inline;
}

.navigator .titlebar .title {
  font-weight:bold;
  font-size:1.2em;
}

.navigator .toolbar {
    background-color:#F3F4EB;
    border-bottom:1px solid #BBBBBB;
    padding-bottom:0.4em;
    padding-left:0.8em;
    padding-right: 0.8em;
    margin-bottom:0.4em;
}

.navigator .toolbar-right img {
  margin-left: 0.4em;
    float: right;
}

.navigator  .toolbar-left img {
    margin-right: 0.4em;
    float: left;
}

.navigator  .toolbar img:hover {
    cursor: pointer;
}

.navigator .toolbar a:hover {
    cursor: pointer;
}

.navigator .toolbar .gwt-SuggestBox {
  background: url("../image/16/search.png") no-repeat scroll left center #ffffff;
  border: 1px solid #bbbbbb;
  padding-left: 20px;
}

.navigator .gwt-MenuBar {
  background:transparent;
  border:0 none;
}

.navigator .gwt-MenuBar-horizontal .gwt-MenuItem {
  color:#666666;
  font-weight:bold;
  padding:0px;
  vertical-align:bottom;
}

.navigator .gwt-MenuBar-horizontal .gwt-MenuItemSeparator {
  padding-right:0.4em;
}

.navigator .gwt-MenuBar-horizontal .gwt-MenuItem-selected {
    
}

.gwt-MenuItem.tools {
  background:url("../image/20/tools.png") no-repeat scroll left center transparent;
  height: 20px;
  width:25px;
}

.gwt-MenuItem.add {
  background:url("../image/20/add-item.png") no-repeat scroll left center transparent;
  height: 20px;
  width:25px;
}

.gwt-MenuItem.edit {
  background:url("../image/20/edit.png") no-repeat scroll left center transparent;
  height: 20px;
  width:25px;
}

.navigator .gwt-MenuItem.next {
  background:url("../image/20/next.png") no-repeat scroll left center transparent;
  height: 20px;
  width:25px;
}

.navigator .gwt-MenuItem.next.disabled {
  background:url("../image/20/next-disabled.png") no-repeat scroll left center transparent;
}
/* ... */

